# HQR-Hex_Gait_Control

./: CMakeLists.txt  README.md  package.xml
config/: controller_node_params.yaml  internal_states_params.yaml  pose_info_params.yaml
include/controller_node/: controller_node.h
include/internal_states/: internal_states.h
include/pose_info/: log_positions.h  pose_info.h
launch/: HQR_Hex_Control.launch
msg/: internal_states_msg.msg  pose_info_msg.msg
src/: closestobstacle.h  com.h  controller_node.cpp  hip_positions.h  internal_states.cpp  log_positions.h  pose_info.cpp  quat_2_euler.h  transform.h
